--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   --secondary-color: #1c3fa8;
   --dark-color: #002240;
   --light-color: #f4f4f4;
+  --succes-color: #5cb85c;
+  --alert-color: #d9534f;
 }
 * {
   box-sizing: border-box;
@@ -97,6 +99,10 @@ img {
   overflow: visible;
 }
 
+.showcase-text {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
   position: relative;
   top: 60px;
@@ -104,6 +110,7 @@ img {
   width: 400px;
   padding: 40px;
   z-index: 100;
+  animation: slideInFromRifht 1s ease-in;
 }
 .showcase-form .form-control {
   margin: 30px 0;
@@ -242,6 +249,7 @@ img {
 
 .stats {
   padding-top: 100px;
+  animation: slideInFromBottom 1s ease-in;
 }
 .stats-heading {
   max-width: 500px;
@@ -327,13 +335,56 @@ img {
   margin: 0 10px;
 }
 
+/*Animations*/
+@keyframes slideInFromLeft {
+  0% {
+     transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+     transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+     transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+     transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 /*Tablets*/
 @media (max-width: 768px) {
   .grid,
   .showCase .grid,
   .stats .grid,
   .cli .grid,
-  .cloud .grid {
+  .cloud .grid,
+  .features-main .grid,
+  .docs-main .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -351,6 +402,20 @@ img {
   .cli .grid > *:first-child {
     grid-column: 1;
     grid-row: 1;
+  }
+  .features-head,
+  .features-sub-head,
+  .docs-head {
+    text-align: center;
+  }
+  .features-head img,
+  .features-sub-head img,
+  .docs-head img{
+    justify-self: center;
+  }
+  .features-main .grid > *:first-child,
+  .features-main .grid> *:nth-child(2){
+    grid-column: 1;
   }
 }
 /*Mobile*/
@@ -376,3 +441,92 @@ img {
   width: 300px;
   justify-self: flex-end;
 }
+.features-sub-head h1{
+  color: var(--dark-color);
+}
+.features-sub-head p{
+  color: var(--dark-color);
+}
+.features-main .card > i{
+  margin-right: 20px;
+}
+
+.features-main .grid{
+  padding: 30px;
+}
+
+.features-main .grid > *:first-child{
+  grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2){
+  grid-column: 1 / span 2;
+}
+
+/*Start of Docs*/
+.docs-head img{
+  width: 200px;
+  justify-self: flex-end;
+}
+.docs-main h3{
+  margin: 20px 0;
+}
+.docs-main .grid{
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-end;
+}
+
+.docs-main nav li{
+  font-size: 17px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover{
+  font-weight: bold;
+}
+
+/*Alert*/
+
+.alert{
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+.alert i{
+  margin-right: 10px;
+}
+.alert-succes{
+ background-color: var(--succes-color);
+ color: #fff;
+}
+
+.alert-error{
+  background-color: var(--alert-color);
+  color: #fff;
+}
+
+code, pre {
+   background: #333;
+   color: #fff;
+   padding: 10px;
+}
+
+.text-primary
+ {
+  color: var(--primary-color);
+}
+.text-secondary {
+  color: var(--secondary-color);
+}
+.text-dark
+ {
+  color: var(--dark-color);
+}
+.text-light {
+  color: var(--light-color);
+}
+
+
